Another big commit that contains a lot of things * Fix buttons becoming circles even if menu is already opened * Fix circular app menu edit buttons * Remove borders and boxshads from close icon (and use hov/active states instead) * Align sidebar header's color depending on current state * Invert GitHub icon when in private browsing mode

--- a/src/chrome/browser/browser-addons.css
+++ b/src/chrome/browser/browser-addons.css
@@ -302,6 +302,15 @@ window[tabsontop] .tabbrowser-tabs:not([highlightProtected]) > .tabbrowser-tab[p
   border-bottom: var(--main-border-color) 1px solid !important;
 }
 
+#main-window[privatebrowsingmode=temporary] sidebarheader {
+  background-color: var(--main-navbg-color);
+}
+
+#main-window[privatebrowsingmode=temporary] sidebarheader,
+#main-window[privatebrowsingmode=temporary] #sidebars-titlebutton {
+  color: var(--general-color);
+}
+
 /* Toolbar Appmenu Button & Toolbarize */
 toolbar:not([brighttext]) #toolbar-appmenu-button > .toolbarbutton-icon,
 toolbar:not([brighttext]) #appmenu-toolbar-button > .toolbarbutton-icon,
