--- a/src/chrome/mozapps/extensions/extensions.css
+++ b/src/chrome/mozapps/extensions/extensions.css
@@ -100,7 +100,7 @@
 }
 
 .nav-button:hover:active:not([disabled="true"]),
-#header-utils-btn:hover:active {
+#header-utils-btn:hover:active:not([open="true"]) {
     border-radius: 500em !important;
 	box-shadow: 0px 0px 0px 5px rgba(0, 0, 0, 0.22) !important;
     background-color: rgba(0, 0, 0, 0.22) !important;
